bugs/tests/fuzz-05-18-13-21-59/r_635_r_18_issue3635_F10_P18_9_M0.stderr
fuzz/fuzz1/illtyped/r_18_issue3635_F10_P18_9_M0.p4(13): [--Werror=type-error] error: '(bool){}'
a = ((bool) ({ })),
     ^^^^^^^^^^^^
  ---- Actual error:
  fuzz/fuzz1/illtyped/r_18_issue3635_F10_P18_9_M0.p4(13): Cannot unify type 'tuple<>' with type 'bool'
  a = ((bool) ({ })),
               ^^^
  fuzz/fuzz1/illtyped/r_18_issue3635_F10_P18_9_M0.p4(13)
  a = ((bool) ({ })),
        ^^^^
  ---- Originating from:
  fuzz/fuzz1/illtyped/r_18_issue3635_F10_P18_9_M0.p4(13): Cannot cast from 'tuple<>' to 'bool'
  a = ((bool) ({ })),
               ^^^
  fuzz/fuzz1/illtyped/r_18_issue3635_F10_P18_9_M0.p4(13)
  a = ((bool) ({ })),
        ^^^^
In file: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172
Compiler Bug: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172: Null srcType

